# bagel

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  compose.yaml  main.py  pyproject.toml  server.py  settings.py  streamlit.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: feature-to-stage-pr.yaml  lint_feature_branch.yaml
doc/tutorials/mcp/: 0_claude_code_px4.ipynb  0_demo.ipynb  1_gemini_cli_ros2.ipynb  2_cursor_px4.ipynb
doc/tutorials/pipelines/: 0_basics.ipynb  acceleration.yaml
doc/tutorials/readers/: 0_basics.ipynb  1_read_by_topic.ipynb  2_read_by_type.ipynb
docker/: Dockerfile.px4  Dockerfile.ros1  Dockerfile.ros2
src/: artifacts.py  cache.py  robolog.py
src/command/clear/: command.py
src/command/extract/: command.py
src/command/list/: command.py
src/command/run/: command.py  validate.py
src/command/up/: command.py
src/convert/: converter.py  factory.py  schema.py
src/convert/protobuf/: __init__.py  cast.py  converter.py
src/convert/px4ulog/: __init__.py  cast.py  converter.py
src/convert/ros1msg/: __init__.py  cast.py  converter.py  definition.py  grammar.lark  parse.py
src/convert/ros2msg/: __init__.py  cast.py  converter.py  definition.py  grammar.lark  parse.py
src/reader/: factory.py  frequency.py  metadata.py  reader.py  topic.py  type.py
src/reader/px4/ulg/: topic.py  (+4 more)
src/reader/ros2/: metadata.py  reader.py
src/webapp/: utils.py
src/webapp/pipelines/: browse_old.py  create_old.py  new.py  pipeline.py
src/webapp/robolog/: latency.py  logging.py  messages.py  summary.py
test/convert/ros1msg/: test_ros1msg_builtin_types.py  test_ros1msg_grammar.py  test_ros1msg_noetic.py  test_ros1msg_sample_full_text.py
test/convert/ros2msg/: test_ros2_humble.py  test_ros2_iron.py  test_ros2_jazzy.py  test_ros2_kilted.py  test_ros2msg_builtin_types.py  test_ros2msg_grammar.py  test_ros2msg_sample_full_text.py
(+40 files in other folders)
